# d4-build

./: .gitignore  CLAUDE.md  README.md  build-report-40pt.md  build-report-leveling.md  my-leveling-plan.html  my-leveling-plan.md  pyproject.toml
scripts/: md_to_html.py
src/d4_build/: affix_recommendations.py  cache.py  cli.py  config.py  humanize.py  reconcile.py  scoring.py  skill_modifier_mapping.py  skill_node_overrides.py
src/d4_build/data/: affix_recommendations.yaml  skill_modifier_mapping.yaml  skill_node_overrides.yaml
src/d4_build/explain/: buckets.py
src/d4_build/model/: __init__.py  affix.py  build.py  class_.py  enums.py  item.py  paragon.py  skill.py  stats.py
src/d4_build/optimize/: compare.py  evaluation.py  formula.py  marginal.py  search.py  skill_allocation.py  training.py
src/d4_build/parsers/: guide_html.py  planner_remix.py
src/d4_build/report/: markdown.py
src/d4_build/report/templates/: build-report.md.j2
src/d4_build/sources/: d4data.py  maxroll.py  maxroll_index.py
tests/: conftest.py  test_cache.py  test_explainer.py  test_humanize.py  test_model.py  test_paragon_steps.py  test_parser_guide.py  test_parser_planner.py  test_reconcile.py  test_report.py  test_scoring.py  test_skill_node_overrides.py  test_source_d4data.py  test_source_index.py  test_source_maxroll.py
tests/fixtures/d4data/: affix_nid_to_key.json
tests/fixtures/d4data/json/enUS_Text/meta/StringList/: Item_Chest_Unique_Generic_103.stl.json
